--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,300,400' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" type="image/png" href="/faviconIcon.ico"/>
 </head>
 <body>
 	<div id="app"></div>
