--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tom Hanson</title>
-  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+  	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+  	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<div id="app"></div>
